--- a/style.css
+++ b/style.css
@@ -3,175 +3,48 @@
     margin: 0;
 }
 
-li{
-    list-style: none;
+
+/* HEADER */
+
+.span3D{
+    color: rgb(13, 138, 240);
 }
-
-a{
-    text-decoration: none;
-}
-
-/* grid track layout */
-
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto auto;
-    grid-template-areas: 
-   "header header header header"
-   "main main main main"
-   "main main main main"
-   "main main main main"
-   "main main main main"
-   "footer footer footer footer"
-}
-
-/* inicio header */
 
 header{
-    display: grid;
-    grid-area: header;
     position: sticky;
     top: 0px;
+    z-index: 100;
+    border-bottom:rgb(13, 138, 240) solid 5px ;
 }
 
-
-
-.contenedorLogo{
-    background-color: rgb(7, 7, 7);
-    display: flex;
-    justify-content: center;
-    width: 100%;
+#navbarNavAltMarkup{
+    justify-content: end;
+    margin: 0% 5% 0% 0%;
 }
 
-.logo{
-    height: 50px;
-    width: auto;
-}
-
-.navBar {
-    background-color: rgb(34, 33, 33);
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    position: relative;
-}
-
-.navBar ul{
-    display: flex;
-    font-size: 12px;
-    
-}
-
-.navBar ul li{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    padding: 5px;
-    
-}
-
-.navBar ul li a{
-    color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-@media only screen and (min-width: 1024px){
-    header{
-        position: sticky;
-        top: 0px;
-    }
-    
-    .navBar ul{
-        background-color: rgb(32, 31, 31);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 40px;
-        font-size: 16px;
-    }
-    
-    .navBar ul li{
-        margin: 3%;
-    }
-    
-    .navBar ul li a{
-        color: white;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    }
-    
-    .navBar ul li a:hover{
-        color: rgb(18, 183, 248);
-        font-style: italic;
-    }
-}
-
-@media only screen and (min-width: 768px){
-    header{
-        position: sticky;
-        top: 0px;
-    }
-    
-    .navBar ul{
-        background-color: rgb(32, 31, 31);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 40px;
-        font-size: 16px;
-    }
-    
-    .navBar ul li{
-        margin: 3%;
-    }
-    
-    .navBar ul li a{
-        color: white;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    }
-    
-}
-
-/* fin header */
+/* FIN HEADER */
 
 
 
-/* inicio main */
-
-main{
-    display: grid;
-    grid-area: main;
-    width: 100%;
-}
-
-/* fin main */
-
-
-
-/* inicio footer */
+/* INICIO FOOTER */
 
 footer{
     background-color: rgb(32, 31, 31);
-    padding: 20px 0px 20px 0px;
+    padding: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     flex-direction: column;
-    grid-area: footer;
-    width: 100%;
 }
 
 footer p {
     color: white;
     font-size: 18px;
     padding-bottom: 15px;
-    margin-left: 5%;
 }
 
 .redes {
     display: flex;
     gap: 1rem;
-    margin-left: 5%;
 }
 
 .redes li a i {
@@ -184,776 +57,151 @@ footer p {
     color: #fff;
 }
 
+/* FIN FOOTER */
 
-/* fin footer */
 
 
-/* inicio aside */
+
+/* INICIO ASIDE */
 
 .logoWhatsapp img{
-    display: inline-block;
-    width: 35px;
-    height: 35px;
+    display: none;
+    width: 50px;
+    height: 50px;
     position: relative;
-    left: 85%;
+    left: 80%;
     position: fixed;
-    bottom: 3%;
+    bottom: 10%;
 }
 
-@media only screen and (min-width:768px){
-    .logoWhatsapp img{
-        left: 90%;
-    }
-      
+/* FIN ASIDE */
+
+/* INICIO DE INDEX HTML */
+
+.imagenPrincipal{
+    width: 100%;
 }
 
-@media only screen and (min-width:1024px){
-    .logoWhatsapp img{
-        width: 50px;
-        height: 50px;
-        left: 95%;
-
-    }
-      
+.imprimimosTusIdeas{
+    color: rgb(69, 104, 117);
+    
 }
-
-
-/* fin aside */
-
-
-
-/* inicio index */
 
 .contenedorArticuloPrincipal{
-    background: rgb(249,0,222);
-    background: linear-gradient(306deg, rgba(249,0,222,1) 0%, rgba(74,74,172,1) 48%, rgba(112,205,223,1) 100%, rgba(14,80,96,1) 100%);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    padding: 30px 0px 30px 0px;
-    margin: 60px 5% 30px 5%;
-    border-radius: 5px;
-    width: 90%;
+    margin-top: -3%;
+    margin-bottom: 60px;
 }
 
-.contenedorArticuloPrincipal div h1{
-    padding-bottom: 5px;
-    margin-left: 5%;
-}
-
-.contenedorArticuloPrincipal div p{
-    margin-left: 5%;
+.imgArticuloSecundario{
+    width: 100%;
 }
 
 .contenedorArticuloSecundario{
-    background-color: rgb(241, 238, 238);
-    color: rgb(0, 0, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    padding: 30px 0px 30px 0px;
-    margin: 30px 5% 30px 5%;
-    border-radius: 5px;
-    width: 90%;
-}
-
-.contenedorArticuloSecundario div h2{
-    margin-left: 5%;
-}
-
-.contenedorArticuloSecundario div p{
-    margin-left: 5%;
-}
-
-.necesitasInspiración h3{
-    display: flex;
-    justify-content: center;
-    color: gray;
-    font-size: 25px;
-    margin: 30px 0px 10px 0px;
-}
-
-.necesitasInspiración p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 95%;
-    padding: 5px;
-    margin-bottom: 20px;
-}
-
-.contenedorArticuloPrincipal div img{
-    display: none;
-}
-
-
-
-.thingiverseArticulo{
-    background-color: honeydew;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    margin-left: 0px;
-    width: 100%;
-}
-
-.imagenLogoTh {
-    display: none;
-}
-
-.textoTh{
-    text-align: center;
     padding: 20px;
 }
 
-.imagenTh{
-    width: 90%;
-    margin-bottom: 20px;
+.textoLaImpresión{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 60px 20px 20px 20px;
+    font-size: 20px;
+    color: gray;
 }
 
+.textoComoTrabajamos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+
+}
+
+.iconosComoTrabajamos{
+    width: 100px;
+    height: 100px;
+
+}
+
+.contenedorPasosComoTrabajamos{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 0px 20px 0px 20px;
+}
+
+.textoPasosComoTrabajamos{
+    color: rgb(58, 139, 214);
+    font-weight: 600;
+}
+
+.queEsLaImpresion3d{
+    background-color: rgb(13, 138, 240);
+    color: white;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 40px;
+}
+
+
+.contenedorListaQueEsLaImpresion3d{
+    padding: 50px 0px 50px 0px;
+}
+
+.listaQueEsLaImpresion3d h4{
+    padding: 20px 0px 20px 0px;
+    text-align: center;
+}
+
+.ContenedorImagenImpresora3d{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imagenImpresora3d{
+    width: 70%;
+}
+
+.logoWhatsapp a img{
+    width: 100px;
+    height: 100px;
+}
+
+.necesitasInspiración{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.necesitasInspiración h5{
+    color: gray;
+    font-size: 2rem;
+}
+
+
+.contenedorCardThengiverse{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.contenedorCardCults{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
 
 .cultsArticulo{
-    background-color: rgba(195, 0, 255, 0.151);
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px 0px 50px 0px;
-    width: 100%;
-}
-
-.imagenlogoCu{
     display: none;
 }
 
-.textoCu{
-    text-align: center;
-    padding: 20px;
-}
-
-.imagenCu{
-    width: 85%;
-    margin-bottom: 20px;
-}
-
-
-/* inicio index 1024px */
-
-@media only screen and (min-width: 1024px) {
-
-    .contenedorArticuloPrincipal{
-        background-image: url(./imagenes/BackgraundH1Index.png);
-        height: 200px;
-        width: 90%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
-    
-    .articuloPrincipal h1{
-        margin: 20px 20px 20px 50px;
-        font-size: 30px;
-    }
-    
-    .articuloPrincipal p{
-        margin: 20px 20px 20px 40px;
-        font-size: 20px;
-    }
-    
-    .contenedorArticuloPrincipal div img{
-        display: flex;
-        justify-content: end;
-        padding-right: 20px;
-        width: 180px;
-    
-    }
-    
-    .contenedorArticuloSecundario{  
-        justify-content: start;
-        align-items: start;
-        width: 90%;
-    }
-
-    .articuloSecundario{
-        display: flex;
-    }
-    
-    .articuloSecundario h2{
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        color: black;
-        padding: 20px;
-        font-size: 30px;
-    }
-    
-    .articuloSecundario p{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 20px;
-    }
-    
-    .necesitasInspiración{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 60px;
-        padding-top: 30px;
-    }
-    
-    .necesitasInspiración h3{
-        display: flex;
-        justify-content: center;
-        font-size: 30px;
-        color: gray;
-    }
-    
-    .necesitasInspiración p{ 
-        font-size: 20px;
-        padding: 10px 0px 30px 0px;
-        text-align: center;
-       
-    }
-    
-    .thingiverseArticulo{
-        background-color: white;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly; 
-        width: 90%;
-        margin: 0% 5% 0% 5%;
-    }
-
-    .imagenTh{
-        width: 50%;
-    }
-
-    .imagenLogoTh{
-        display: flex;
-    }
-
-    .textoTh{
-        text-align: start;
-    }
-    
-    .thingiverseArticulo div{
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: start;
-        padding: 50px;
-        color: black;
-    }
-    
-    .thingiverseArticulo img{
-        object-fit: contain;
-    }
-    
-    .thingiverseArticulo div ul li a{
-        
-        color: rgb(0, 217, 255);
-        margin-bottom: 10px;
-    
-    }
-    
-    .cultsArticulo{
-        background-color: white;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-evenly; 
-        width: 90%;
-        margin: 0% 5% 5% 5%;
-    }
-
-    .imagenCu{
-        width: 50%;
-    }
-
-    .textoCu{
-        text-align: start;
-    }
-
-    .imagenlogoCu{
-        display: flex;
-    }
-    
-    .cultsArticulo div{
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: start;
-        padding: 50px;
-        color: black;
-    }
-    
-    .cultsArticulo img{
-        object-fit: contain;
-    }
-    
-    .cultsArticulo div ul li a{
-        
-        color: rgb(255, 0, 200);
-        margin-bottom: 10px;
-    
-    }
-}
-
-/* fin index 1024px */
-
-/* fin index */
-
-
-
-/* inicio trabajos */
-
-.articuloInicioTrabajos{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.articuloInicioTrabajos h1{
-    color: gray;
-    padding: 40px 0px 10px 0px;
-}
-
-.articuloInicioTrabajos p{
-    padding: 10px 0px 10px 0px;
-}
-
-.galeria{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-    object-fit: cover;
-    
-}
-
-
-
-.galeria img{
-    width: 90%;
-    height: auto ;
-    object-fit: cover;
-    padding: 10% 0 5% 10%;
-}
-
-@media only screen and (min-width: 768px){
-
-    .articuloInicioTrabajos h1{
-        color: gray;
-        padding: 10px 0px 10px 0px;
-    }
-    
-    .articuloInicioTrabajos p{
-        padding: 0px 0px 0px 0px;
-    }
-
-    .galeria img{
-        width: 350px;
-        height: 350px;
-    }
-
-    .galeria{
-        display: flex;
-        flex-direction: row;
-        overflow-x: scroll;
-        margin: 3%;
-    }
-
-}
-
-/* inicio trabajos 1024px */
-
-@media only screen and (min-width: 1024px){
-
-    .articuloInicioTrabajos h1{
-        font-size: 25px;
-    }
-
-    .articuloInicioTrabajos p{
-        font-size: 20px;
-    }
-
-    .galeria{
-        display: flex;
-        flex-direction: row;
-        overflow-x: scroll;
-        margin: 5%;
-    }
-    
-    .galeria img{
-        width: 350px;
-        height: 350px;
-        padding: 2px;
-        margin: 10px;
-    }
-
-}
-
-/* fin trabajos 1024px */
-
-/* fin trabajos */
-
-
-/* inicio servicios */
-
-.articuloInicioServicios{
-    display: flex;
-    justify-content: center;
-    padding: 50px 0px 30px 0px;
-}
-
-.articuloInicioServicios h1{
-    color: gray;
-}
-
-.servicioImpresión3d{
-    display: flex;
-    justify-content: center;
-    flex-direction: column-reverse;
-    align-items: center;
-    padding: 20px 0px 20px 0px;
-}
-
-.servicioImpresión3d img{
-    width: 90%;
-    margin: 5%;
-}
-
-.servicioImpresión3d div h2{
-    width: 90%;
-    margin: 0% 5% 0% 5%;
-    text-align: center;
-    font-size: 25px;
-}
-
-.servicioImpresión3d div p{
-    width: 90%;
-    margin: 0% 5% 0% 5%;
-    text-align: center;
-}
-
-
-.servicioDiseño3d{
-    display: flex;
-    justify-content: center;
-    flex-direction: column-reverse;
-    align-items: center;
-    padding: 20px 0px 20px 0px;
-}
-
-.servicioDiseño3d div img{
-    width: 90%;
-    margin: 5%;
-    text-align: center;
-}
-
-.servicioDiseño3d div h3{
-    width: 90%;
-    margin: 0% 5% 0% 5%;
-    text-align: center;
-    font-size: 25px;
-}
-
-.servicioDiseño3d div p{
-    width: 90%;
-    margin: 0% 5% 10% 5%;
-    text-align: center;
-}
-
-/* inicio servicios 1024px */
-
-@media only screen and (min-width: 1024px) {
-    
-    .servicioImpresión3d{
-        flex-direction: row;
-        width: 80%;
-        margin: 0% 10% 0% 10%;
-    }
-
-    .servicioImpresión3d div img{
-        width: 510px;
-        height: auto;
-    }
-
-    .servicioDiseño3d{
-        flex-direction: row-reverse;
-        width: 90%;
-        margin: 0% 5% 0% 5%;
-    }
-   
-}
-
-/* fin servicios 1024px */
-
-/* fin servicios */
-
-
-/* inicio productos */
-
-.articuloInicioProductos{
-    display: flex;
-    justify-content: center;
-    font-size: 18px;
-    color: grey;
-    margin: 3%;
-}
-
-.productos{
-    display: flex;
-    flex-direction: column;
-}
-
-
-/* contenedor de productos */
-
-.contenedorProducto{
-    background-color: rgb(255, 254, 254);
-    border: solid grey 1px;
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: 5%;
-}
-
-.contenedorProducto img{
-    width: 100%;
-    margin-bottom: 5px;
-    object-fit: cover;
-}
-
-.contenedorProducto form a input{
-    display: flex;
-    justify-content: center;
-    margin: 5px 20px 5px 5px;
-    cursor: pointer;
-}
-
-.contenedorProducto p{
-    display: flex;
-    justify-content: start;
-    margin-left: 5px;
-}
-
-/* fin contenedor de producto */
-
-/* inicio productos 1024px */
-
-@media only screen and (min-width: 1024px){
-
-    .productos{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-bottom: 0;
-    }
-
-    .contenedorProducto{
-        width: 50%;
-        margin: 2%;
-    }
-
-}
-
-/* fin productos 1024px */
-
-/* inicio productos 768px */
-
-@media only screen and (min-width: 768px){
-
-    .productos{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin: 10% 0% 20% 0% ;
-    }
-
-    .contenedorProducto{
-        width: 50%;
-        margin: 2%;
-    }
-
-}
-
-/* fin productos 768px */
-
-/* fin productos */
-
-
-/* inicio contactos */
-
-.articuloInicioContacto{
-    display: flex;
-    justify-content: center;
-    margin: 10% 0% 5% 0%;
-    color: gray;
-}
-
-.contenedorFormularioContactoYDondeNosEncontramos{
-    display: flex;
-    flex-direction: column;
-
-}
-
-.formularioDeContacto{
-    width: 85%;
-    margin: 5%;
-    background-color: rgba(255, 255, 255, 0.87);
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    color: rgb(0, 0, 0);
-    padding: 10px 0px 10px 10px;
-    border: solid 1px;
-    border-radius: 5px;
-
-}
-
-#nombreContacto, #apellidoContacto, #emailContacto{
-    width: 230px;
-    height: 20px;
-    border-radius: 5px;
-    margin: 5px 0px 20px 15px;
-}
-
-#areaDeTexto{
-    width: 240px;
-    height: 100px;
-    margin: 20px;
-
-}
-
-.formularioDeContacto h2{
-    display: flex;
-    justify-content: center;
-    font-size: 18px;
-    margin: 5px 0px 5px 30px;
-}
-
-.contenedorDondeNosEncontramos h3{
-    display: flex;
-    justify-content: center;
-    padding: 20px 0px 10px 0px;
-}
-
-.contenedorDondeNosEncontramos iframe{
-    width: 280px;
-    height: 200px;
-    margin: 5% 5% 20% 5%;
-}
-
-@media only screen and (min-width: 768px){
-
-    
-    .articuloInicioContacto{
-        display: flex;
-        justify-content: center;
-        margin: 5% 0% 0% 0%;
-        color: gray;
-    }
-
-    .contenedorFormularioContactoYDondeNosEncontramos{
-        flex-direction: row;
-        margin: 10px 0px 20px 0px;
-    } 
-
-    .contenedorDondeNosEncontramos iframe{
-        width: 380px;
-        height: 310px;
-        margin: 5% 5% 20% 5%;
-    }
-
-    .contenedorDondeNosEncontramos h3{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 20px 0px 10px 0px;
-    }
-
-}
-
-@media only screen and (min-width: 1024px){
-
-    
-    .articuloInicioContacto{
-        display: flex;
-        justify-content: center;
-        margin: 50px 30px 0px 30px;
-        font-size: 22px;
-        color: grey; 
-    }
-    
-    .contenedorFormularioContactoYDondeNosEncontramos{
-        display: flex;
-        justify-content: center;
-    
-    }
-    
-    .formularioDeContacto{
-        width: 460px;
-        margin: 80px;
-        border-radius: 10px;
-        padding: 30px 30px 30px 70px;
-        background-color: rgba(32, 32, 32, 0.87);
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        flex-direction: column;
-        color: white;
-    }
-    
-    #nombreContacto, #apellidoContacto, #emailContacto{
-        width: 408px;
-        height: 20px;
-        border-radius: 5px;
-        margin: 5px 0px 20px 0px;
-    }
-    
-    #areaDeTexto{
-        width: 400px;
-        height: 100px;
-        margin-right: 50px;
-    }
-    
-    #checkBox{
-        margin-bottom: 20px;
-    }
-    
-    .formularioDeContacto h2{
-        margin-bottom: 20px;
-    }
-    
-    .contenedorDondeNosEncontramos{
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        width: 460px;
-        margin: 80px;
-    }
-    
-    .contenedorDondeNosEncontramos iframe{
-        width: 400px;
-        height: 300px;
-    }
-    
-    .contenedorDondeNosEncontramos h3{
-        margin: 20px;
-    }
-
-
-}
-
-/* fin contactos */
+/* FIN INDEX HTML */
