--- a/style.css
+++ b/style.css
@@ -217,3 +217,155 @@ footer p {
 
 /* FIN INDEX HTML */
 
+
+/* INICIO TRABAJOS HTML */
+
+.articuloInicioTrabajos{
+    text-align: center;
+    margin-top: 30px;
+}
+
+.contenedorGaleriaDeImagenes{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+@media only screen and (min-width:1024px){
+    .contenedorGaleriaDeImagenes{
+        width: 50%;
+    } 
+}
+
+@media only screen and (max-width:768px){
+    .contenedorGaleriaDeImagenes{
+        width: 70%;
+    } 
+}
+
+/* FIN TRABAJOS HTML */
+
+
+/* INICIO SERVICIOS HTML */
+
+.articuloInicioServicios{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 70px;
+}
+
+.servicioImpresión3d{
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 70px;
+}
+
+.textoServicioImpresión3d{
+    text-align: center;
+}
+
+.imagenServicioImpresión3d{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.servicioDiseño3d{
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 70px;
+}
+
+.textoServicioDiseño3d{
+    text-align: center;
+}
+
+.imagenServicioDiseño3d{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (min-width:320px){
+    .servicioDiseño3d{
+        flex-direction: row-reverse;
+    } 
+}
+
+/* FIN SERVICIOS HTML */
+
+
+/* INICIO PRODUCTOS HTML */
+
+.articuloInicioProductos{
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.CardsProductos{
+    margin-top: 50px;
+    margin-bottom: 50px;  
+}
+
+/* FIN PRODUCTOS HTML */
+
+
+
+/* INICIO CONTACTO HTML */
+
+.contacto{
+    margin-top: 20px;
+    margin-bottom: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.formularioContacto{
+    background-color: rgba(0, 0, 0, 0.884);
+    border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 70px;
+}
+
+.formularioContacto h2{
+    color: white;
+    text-align: center;
+}
+
+.dondeNosEncontramos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 70px;
+}
+
+.dondeNosEncontramos iframe{
+    width: 90%;
+}
+
+@media only screen and (min-width:1024px){
+    .dondeNosEncontramos iframe{
+        width: 200%;
+    }
+}
+
+@media only screen and (min-width:768px){
+    .dondeNosEncontramos iframe{
+        width: 200%;
+    }
+}
+
+
+.dondeNosEncontramos h3{
+    text-align: center;
+}
+
+.checkboxNewsletter{
+    color: white;
+}
