--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,7 @@ footer {
   margin-bottom: 70px; }
   .dondeNosEncontramos h3 {
     text-align: center; }
-  .dondeNosEncontramos .dondeNosEncontramos iframe {
+  .dondeNosEncontramos iframe {
     width: 90%; }
 
 @media only screen and (min-width: 768px) {
