--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,8 @@ footer {
   .dondeNosEncontramos iframe {
     width: 90%; }
 
-@media only screen and (min-width: 768px) {
-  .dondeNosEncontramos iframe {
-    width: 200%; } }
+/* @media only screen and (min-width:768px){
+    .dondeNosEncontramos iframe{
+        width: 200%;
+    }
+} */
