--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,18 @@
   padding: 0;
   margin: 0; }
 
+/* map */
+/* extends */
+.dondeNosEncontramos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+/* mixins */
+main {
+  min-height: 100vh; }
+
 /* INICIO HEADER */
 header {
   position: sticky;
@@ -130,6 +142,8 @@ footer {
   .necesitasInspiración h5 {
     color: gray;
     font-size: 2rem; }
+  .necesitasInspiración p {
+    font-weight: 450; }
 
 .contenedorCardThengiverse {
   display: flex;
@@ -208,6 +222,7 @@ footer {
 
 .CardsProductos {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 50px;
@@ -220,18 +235,12 @@ footer {
     text-align: center; }
 
 .dondeNosEncontramos {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 70px; }
   .dondeNosEncontramos h3 {
     text-align: center; }
   .dondeNosEncontramos iframe {
     width: 90%; }
 
-/* @media only screen and (min-width:768px){
-    .dondeNosEncontramos iframe{
-        width: 200%;
-    }
-} */
+@media only screen and (min-width: 768px) {
+  .dondeNosEncontramos iframe {
+    width: 200%; } }
