--- a/scss/paginas/_productos.scss
+++ b/scss/paginas/_productos.scss
@@ -7,9 +7,7 @@
 }
 
 .CardsProductos{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexboxCenter(column, center, center)
     margin-top: 50px;
     margin-bottom: 50px;  
 }
