--- a/scss/paginas/_servicios.scss
+++ b/scss/paginas/_servicios.scss
@@ -1,16 +1,25 @@
 /* SERVICIOS */
 
+
 .articuloInicioServicios{
     text-align: center;
     margin-top: 50px;
     margin-bottom: 70px;
+
+    p{
+        color: gray;
+        font-size: 20px;
+    }
 }
 
 .servicioImpresión3d{
+    background-color: rgb(250, 250, 250);
     justify-content: center;
     align-items: center;
     margin-top: 50px;
     margin-bottom: 70px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     .textoServicioImpresión3d{
         text-align: center;
@@ -20,16 +29,18 @@
         width: 100%;
         justify-content: center;
         align-items: center;
-        /* border-radius: 10px; */
     }
 }
 
 
 .servicioDiseño3d{
+    background-color: rgb(250, 250, 250);
     justify-content: center;
     align-items: center;
     margin-top: 50px;
     margin-bottom: 70px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     .textoServicioDiseño3d{
         text-align: center;
@@ -43,7 +54,6 @@
         width: 100%;
         justify-content: center;
         align-items: center;
-        /* border-radius: 10px; */
     }
 }
 
@@ -66,6 +76,11 @@
         align-items: center;
         text-align: center;
     }
+}
+
+.contenedorAccordion{
+    margin-top: 30px;
+    margin-bottom: 60px;
 }
 
 
